<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarea 2</string>
    <string name="action_settings">Opciones</string>
    <string name="action_favorito">Favorito</string>
    <string name="action_compartir">Compartir</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_detalle_tienda">Detalle de Tienda</string>
    <string name="detalle_tienda_nombre">Nombre de la Tienda</string>
    <string name="detalle_tienda_direccion">Ciudad, ciudad</string>
    <string name="detalle_tienda_horario">Horario:</string>
    <string name="detalle_tienda_horario_detalle">De Lunes a Viernes!!!!</string>
    <string name="detalle_tienda_llamar">LLAMAR</string>
    <string name="detalle_tienda_email_detalle">correo@tienda.com</string>
    <string name="detalle_tienda_email">Email:</string>
    <string name="detalle_tienda_imagen_label">Imagen:</string>
    <string name="imagen_tienda_desc">Imagen de la tienda</string>
    <string name="detalle_tienda_comentarios_label">Comentarios</string>
    <string name="detalle_tienda_agregar_btn">+</string>
    <string name="msg_share">Te comparto el link de la tienda %1$s . Visita  %2$s</string>
    <string name="title_activity_tienda_imagen">TiendaImagen</string>
    <string name="detalle_tienda_ver_imagen">Ver Imagen</string>

    <string-array name="drawer_options">
        <item name="imagenes">Tiendas</item>
        <item name="tiendas">Imagenes</item>
        <item name="tiendas">Comunidad</item>
    </string-array>

    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="mapa">Aquí va el mapa</string>
    <string name="title_fragment_list">Tiendas</string>
    <string name="title_fragment_map">Mapa</string>
    <string name="title_activity_test">Test</string>

</resources>
