<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetalleTiendaActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/tiendaNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_nombre"
            android:textSize="20sp"
            android:textStyle="bold" 
            />

        <TextView
            android:paddingTop="20dp"
            android:id="@+id/tiendaDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_direccion" />
        
          <TextView
            android:paddingTop="20dp"
            android:id="@+id/tiendaHorarioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_horario"
            android:textSize="15sp"
            android:textStyle="bold" />
          
            <TextView
            android:paddingTop="20dp"
            android:id="@+id/tiendaHorarioDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_horario_detalle" />
            
                 <TextView
            android:paddingTop="20dp"
            android:id="@+id/tiendaEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_email"
            android:textSize="15sp"
            android:textStyle="bold" />
          
            <TextView
            android:paddingTop="20dp"
            android:id="@+id/tiendaEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_email_detalle" />

       
            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle_tienda_llamar" 
                android:drawableLeft="@drawable/phone_call"
                />
            <TextView
            android:paddingTop="20dp"
            android:id="@+id/ImagenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalle_tienda_imagen_label" />         
            
             <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btn_ver_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalle_tienda_ver_imagen" 
                android:drawableLeft="@drawable/ic_action_photo"
                />
            
     <fragment android:id="@+id/listMapContent"
         android:name="com.sp1.tarea2.fragments.TiendaComentariosFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        />
             
         
    </LinearLayout>
 </ScrollView>
